rank.css
@font-face {
    font-family: "Digital-7";
    src: url("./assets/digital-7.ttf");
}

body {
    font-family: Arial, Helvetica, sans-serif;
    width: 100%;
    height: 100%;
    overflow: hidden;
}

#hex-container {
    margin: 0 auto;
    text-align: center;
    position: relative;
    width: 100%;
    height: 100%;
}

#hex-img {
    user-select: none;
}


#rank-container {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
}

#container-footer {
    position: absolute;
    bottom: 0;
    left: 60%;
    transform: translate(-50%, -50%);
}

.rank-number {
    font-family: "Digital-7", monospace;
    margin: 0;
    padding: 0;
    /* font-size: 13rem; */
    font-size: 11.2vw;
    /* font-size: 19vh; */
}

#id-container {
    position: absolute;
    top: 75%;
    left: 50%;
    transform: translate(-50%, -50%);
}
.rank-id {
    font-family: "Digital-7", monospace;
    /* font-size: 5vh; */
    font-size: 2.1vw;
    font-weight: bold;
}

@media (max-width: 992px) {
    #hex-img {
        width: 100%;
        height: 100%;
    }
    .rank-number {
        font-family: "Digital-7", monospace;
        margin: 0;
        padding: 0;
        /* font-size: 13rem; */
        font-size: 25vw;
        /* font-size: 19vh; */
    }
    .rank-id {
        font-size: 5vw;
    }
}

